5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1613_2425.log
== TEST (2019-04-04 23:21:35) 
-- CODE:
distancia=float(input( ))
combustivel=float(input( ))
consumomedio= distancia/combustivel

print(consumo "Km/l" )
-- ERROR:
File "XXXX", line 5
    print(consumo "Km/l" )
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:22:06) 
-- CODE:
distancia=float(input( ))
combustivel=float(input( ))
consumomedio= distancia/combustivel

print(consumomedio "Km/l" )
-- ERROR:
File "XXXX", line 5
    print(consumomedio "Km/l" )
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:22:50) 
-- CODE:
d=float(input( ))
c=float(input( ))
cm= distancia/combustivel

print(cm "Km/l" )
-- ERROR:
File "XXXX", line 5
    print(cm "Km/l" )
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:23:03) 
-- CODE:
d=float(input( ))
c=float(input( ))
cm= d/c

print(cm "Km/l" )
-- ERROR:
File "XXXX", line 5
    print(cm "Km/l" )
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:49:10) 
-- CODE:
d=float(input( ))
c=float(input( ))
cm= d/c

print(cm "Km/l" )
-- ERROR:
File "XXXX", line 5
    print(cm "Km/l" )
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:49:39) 
-- CODE:
d=float(input( ))
c=float(input( ))
c_m= d/c

print(c_m "Km/l" )
-- ERROR:
File "XXXX", line 5
    print(c_m "Km/l" )
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:49:49) 
-- CODE:
d=float(input( ))
c=float(input( ))
c_m= d/c

print(c_m)
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:49:51) 
-- CODE:
d=float(input( ))
c=float(input( ))
c_m= d/c

print(c_m)
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:50:41) 
-- CODE:
d=float(input( ))
c=float(input( ))
c_m= d/c

print(c_m)
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:51:50) 
-- CODE:
d=float(input( ))
c=float(input( ))
c_m= d/c

print(round(c_m,  3 "km/l"))
-- ERROR:
File "XXXX", line 5
    print(round(c_m,  3 "km/l"))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:52:05) 
-- CODE:
d=float(input( ))
c=float(input( ))
c_m= d/c

print(round("c_m,  3 km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("c_m,  3 km/l"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:56:21) 
-- CODE:
d=float(input( ))
c=float(input( ))
c_m= d/c

print(round(c_m,  3 km/l))
-- ERROR:
File "XXXX", line 5
    print(round(c_m,  3 km/l))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:56:32) 
-- CODE:
d=float(input( ))
c=float(input( ))
c_m= d/c

print(round(c_m,  3 "km/l"))
-- ERROR:
File "XXXX", line 5
    print(round(c_m,  3 "km/l"))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 23:56:33) 
-- CODE:
d=float(input( ))
c=float(input( ))
c_m= d/c

print(round(c_m,  3 "km/l"))
-- EXECUTION TIME:
0.14485
-- ERROR:
  File "/home/codebench/codes/1613/2425/main.py", line 5
    print(round(c_m,  3 "km/l"))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:56:34) 
-- CODE:
d=float(input( ))
c=float(input( ))
c_m= d/c

print(round(c_m,  3 "km/l"))
-- ERROR:
File "XXXX", line 5
    print(round(c_m,  3 "km/l"))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:56:48) 
-- CODE:
d=float(input( ))
c=float(input( ))
c_m= d/c

print(round(c_m,  3 ))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 23:57:02) 
-- CODE:
d=float(input( ))
c=float(input( ))
c_m= d/c

print(round(c_m,  3 ))
-- EXECUTION TIME:
0.134435
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:58:51) 
-- CODE:
d=float(input( ))
c=float(input( ))
c_m= d/c

print(round(c_m,  3 + "km/l" ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(c_m,  3 + "km/l" ))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:06:23) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m,  3 + "km/l" ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(c_m,  3 + "km/l" ))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:06:57) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m,  3 + "km/l.str" ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(c_m,  3 + "km/l.str" ))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:09:43) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m,  3 ,"km/l." ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(c_m,  3 ,"km/l." ))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:12:43) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m,  3 "\km/l.\" ))
-- ERROR:
File "XXXX", line 5
    print(round(c_m,  3 "\km/l.\" ))
                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:18:06) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y
s=km/l
print(round(c_m,  3 s ))
-- ERROR:
File "XXXX", line 5
    print(round(c_m,  3 s ))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:18:07) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y
s=km/l
print(round(c_m,  3 s ))
-- ERROR:
File "XXXX", line 5
    print(round(c_m,  3 s ))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:18:16) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y
s=km/l
print(round(c_m,  3 ,s ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s=km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:19:35) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y
s="km/l"
print(round(c_m,  3 ,s ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(c_m,  3 ,s ))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:19:56) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y
s="km/l"
print(round(c_m,  3 s ))
-- ERROR:
File "XXXX", line 5
    print(round(c_m,  3 s ))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:20:11) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y
s="km/l"
print(round(c_m,  3 ,"s" ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(c_m,  3 ,"s" ))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:33:49) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m=" x/y \"km/l\" "

print(round(c_m,  3 ,"s" ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(c_m,  3 ,"s" ))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:14:43) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m=" x/y \"km/l\" "

print(round(c_m,  3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(c_m,  3))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:15:12) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m=" x/y kml

print(round(c_m,  3))
-- ERROR:
File "XXXX", line 3
    c_m=" x/y kml
                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:15:18) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m=" x/y kml"

print(round(c_m,  3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(c_m,  3))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:48:59) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m="x/y \"Python\"."

print(round(c_m,  3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(c_m,  3))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:49:45) 
-- CODE:
x=float(input( ))
y=float(input( ))


print(round("x/y \"Python\"."))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("x/y \"Python\"."))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:52:41) 
-- CODE:
x=float(input( ))
y=float(input( ))


print(round("x/y \"Python\".",  3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("x/y \"Python\".",  3))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:53:37) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m  "\"Python\".",  3))
-- ERROR:
File "XXXX", line 5
    print(round(c_m  "\"Python\".",  3))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:53:39) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m  "\"Python\".",  3))
-- ERROR:
File "XXXX", line 5
    print(round(c_m  "\"Python\".",  3))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:53:54) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(c_m  "\"Python\".")
-- ERROR:
File "XXXX", line 5
    print(c_m  "\"Python\".")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:53:57) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(c_m  "\"Python\".")
-- ERROR:
File "XXXX", line 5
    print(c_m  "\"Python\".")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:53:59) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(c_m  "\"Python\".")
-- ERROR:
File "XXXX", line 5
    print(c_m  "\"Python\".")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:54:38) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(c_m )
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:55:01) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(c_m "\"km/l\"." )
-- ERROR:
File "XXXX", line 5
    print(c_m "\"km/l\"." )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:55:24) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(c_m "km/l")
-- ERROR:
File "XXXX", line 5
    print(c_m "km/l")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:10:54) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m, 2)"Km/l")
-- ERROR:
File "XXXX", line 5
    print(round(c_m, 2)"Km/l")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:11:15) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m, 2),"Km/l")
-- OUTPUT:
14.29 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 22:11:29) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m, 2),"Km/l")
-- EXECUTION TIME:
0.131077
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.29 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
14.29 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
18.12 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 22:11:29) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m, 2),"Km/l")
-- EXECUTION TIME:
0.133402
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.29 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.12 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.8 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:11:39) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m, 2),"Km/l")
-- OUTPUT:
14.29 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:12:09) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m, 3),"Km/l")
-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 22:12:23) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m, 3),"Km/l")
-- EXECUTION TIME:
0.186406
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:12:23) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m, 3),"Km/l")
-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:14:41) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m, 3),"Km/l")
-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 22:14:55) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m, 3),"Km/l")
-- EXECUTION TIME:
0.127278
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:15:00) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m, 3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 22:15:08) 
-- CODE:
x=float(input( ))
y=float(input( ))
c_m= x/y

print(round(c_m, 3),"km/l")
-- EXECUTION TIME:
0.158459
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
